--- a/Movie_data.ipynb
+++ b/Movie_data.ipynb
@@ -3521,7 +3521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26e30b7a",
+   "id": "6dc3fb50",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3529,7 +3529,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "9b633ce9",
+   "id": "c4b8dca7",
    "metadata": {},
    "outputs": [
     {
@@ -3647,7 +3647,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "e6801306",
+   "id": "bdaade34",
    "metadata": {},
    "outputs": [
     {
@@ -3778,7 +3778,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "71efeec3",
+   "id": "15cf7bcf",
    "metadata": {},
    "outputs": [
     {
@@ -3854,7 +3854,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "4b3dc408",
+   "id": "b3b54b5f",
    "metadata": {},
    "outputs": [
     {
@@ -3890,7 +3890,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "276179b7",
+   "id": "2e1eb635",
    "metadata": {},
    "outputs": [
     {
@@ -3926,7 +3926,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "b173071e",
+   "id": "a1d6b8a9",
    "metadata": {},
    "outputs": [
     {
@@ -3975,7 +3975,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "67b6ec79",
+   "id": "28a74ab1",
    "metadata": {},
    "outputs": [
     {
@@ -4009,7 +4009,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "8a784981",
+   "id": "148dc62f",
    "metadata": {},
    "outputs": [
     {
@@ -4127,7 +4127,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "4ac9d4d0",
+   "id": "e05ebb93",
    "metadata": {},
    "outputs": [
     {
@@ -4149,7 +4149,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "97239372",
+   "id": "d45b72e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4160,7 +4160,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "16dc3906",
+   "id": "ee3b03bc",
    "metadata": {},
    "outputs": [
     {
@@ -4624,7 +4624,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "768a493f",
+   "id": "f9c64ed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4634,7 +4634,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "97287955",
+   "id": "0d8c960f",
    "metadata": {},
    "outputs": [
     {
@@ -4668,7 +4668,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "fa3b03eb",
+   "id": "e22184fb",
    "metadata": {},
    "outputs": [
     {
@@ -4707,7 +4707,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "a81d8c28",
+   "id": "6220de65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4718,7 +4718,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "579b8e51",
+   "id": "b3f3b498",
    "metadata": {},
    "outputs": [
     {
@@ -4851,7 +4851,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "63c54124",
+   "id": "7c083700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4870,7 +4870,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "c0c3470e",
+   "id": "7f5384b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4881,7 +4881,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "10354634",
+   "id": "690f125f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4895,7 +4895,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "f31288d3",
+   "id": "fd098aee",
    "metadata": {},
    "outputs": [
     {
@@ -5157,7 +5157,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "769be642",
+   "id": "a08e64ea",
    "metadata": {},
    "outputs": [
     {
@@ -5180,7 +5180,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "d76ad7a9",
+   "id": "8b99e2bd",
    "metadata": {},
    "outputs": [
     {
@@ -5202,7 +5202,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "76703ced",
+   "id": "51c6f95d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5226,7 +5226,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "678ee273",
+   "id": "389f2729",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5251,8 +5251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
-   "id": "694cf111",
+   "execution_count": 202,
+   "id": "5c8d5068",
    "metadata": {},
    "outputs": [
     {
@@ -5499,7 +5499,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5510,8 +5510,295 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 204,
+   "id": "8bdf9962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "3a139505",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "9add5166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "4eebfc60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "52381f27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>kaggle_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>wikipedia_url</th>\n",
+       "      <th>imdb_link</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>...</th>\n",
+       "      <th>rating_0.5</th>\n",
+       "      <th>rating_1.0</th>\n",
+       "      <th>rating_1.5</th>\n",
+       "      <th>rating_2.0</th>\n",
+       "      <th>rating_2.5</th>\n",
+       "      <th>rating_3.0</th>\n",
+       "      <th>rating_3.5</th>\n",
+       "      <th>rating_4.0</th>\n",
+       "      <th>rating_4.5</th>\n",
+       "      <th>rating_5.0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0098987</td>\n",
+       "      <td>9548</td>\n",
+       "      <td>The Adventures of Ford Fairlane</td>\n",
+       "      <td>The Adventures of Ford Fairlane</td>\n",
+       "      <td>Kojak. Columbo. Dirty Harry. Wimps.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/The_Adventures_o...</td>\n",
+       "      <td>https://www.imdb.com/title/tt0098987/</td>\n",
+       "      <td>104.00</td>\n",
+       "      <td>49,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0098994</td>\n",
+       "      <td>25501</td>\n",
+       "      <td>After Dark, My Sweet</td>\n",
+       "      <td>After Dark, My Sweet</td>\n",
+       "      <td>All they risked was everything.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/After_Dark,_My_S...</td>\n",
+       "      <td>https://www.imdb.com/title/tt0098994/</td>\n",
+       "      <td>114.00</td>\n",
+       "      <td>6,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0099005</td>\n",
+       "      <td>11856</td>\n",
+       "      <td>Air America</td>\n",
+       "      <td>Air America</td>\n",
+       "      <td>The few. The proud. The totally insane.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Air_America_(film)</td>\n",
+       "      <td>https://www.imdb.com/title/tt0099005/</td>\n",
+       "      <td>112.00</td>\n",
+       "      <td>35,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0099012</td>\n",
+       "      <td>8217</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Alice_(1990_film)</td>\n",
+       "      <td>https://www.imdb.com/title/tt0099012/</td>\n",
+       "      <td>102.00</td>\n",
+       "      <td>12,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0099018</td>\n",
+       "      <td>25943</td>\n",
+       "      <td>Almost an Angel</td>\n",
+       "      <td>Almost an Angel</td>\n",
+       "      <td>Who does he think he is?</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Almost_an_Angel</td>\n",
+       "      <td>https://www.imdb.com/title/tt0099018/</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>25,000,000.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>26.00</td>\n",
+       "      <td>37.00</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>11.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     imdb_id  kaggle_id                            title  \\\n",
+       "0  tt0098987       9548  The Adventures of Ford Fairlane   \n",
+       "1  tt0098994      25501             After Dark, My Sweet   \n",
+       "2  tt0099005      11856                      Air America   \n",
+       "3  tt0099012       8217                            Alice   \n",
+       "4  tt0099018      25943                  Almost an Angel   \n",
+       "\n",
+       "                    original_title                                  tagline  \\\n",
+       "0  The Adventures of Ford Fairlane      Kojak. Columbo. Dirty Harry. Wimps.   \n",
+       "1             After Dark, My Sweet          All they risked was everything.   \n",
+       "2                      Air America  The few. The proud. The totally insane.   \n",
+       "3                            Alice                                      NaN   \n",
+       "4                  Almost an Angel                 Who does he think he is?   \n",
+       "\n",
+       "  belongs_to_collection                                      wikipedia_url  \\\n",
+       "0                   NaN  https://en.wikipedia.org/wiki/The_Adventures_o...   \n",
+       "1                   NaN  https://en.wikipedia.org/wiki/After_Dark,_My_S...   \n",
+       "2                   NaN   https://en.wikipedia.org/wiki/Air_America_(film)   \n",
+       "3                   NaN    https://en.wikipedia.org/wiki/Alice_(1990_film)   \n",
+       "4                   NaN      https://en.wikipedia.org/wiki/Almost_an_Angel   \n",
+       "\n",
+       "                               imdb_link              runtime  \\\n",
+       "0  https://www.imdb.com/title/tt0098987/               104.00   \n",
+       "1  https://www.imdb.com/title/tt0098994/               114.00   \n",
+       "2  https://www.imdb.com/title/tt0099005/               112.00   \n",
+       "3  https://www.imdb.com/title/tt0099012/               102.00   \n",
+       "4  https://www.imdb.com/title/tt0099018/                95.00   \n",
+       "\n",
+       "                budget  ...           rating_0.5           rating_1.0  \\\n",
+       "0        49,000,000.00  ...                 0.00                 0.00   \n",
+       "1         6,000,000.00  ...                 0.00                 0.00   \n",
+       "2        35,000,000.00  ...                 0.00                 0.00   \n",
+       "3        12,000,000.00  ...                 0.00                 0.00   \n",
+       "4        25,000,000.00  ...                 3.00                 0.00   \n",
+       "\n",
+       "            rating_1.5           rating_2.0           rating_2.5  \\\n",
+       "0                 0.00                 0.00                 0.00   \n",
+       "1                 0.00                 0.00                 0.00   \n",
+       "2                 0.00                 0.00                 0.00   \n",
+       "3                 0.00                 0.00                 0.00   \n",
+       "4                 3.00                 2.00                 5.00   \n",
+       "\n",
+       "            rating_3.0           rating_3.5           rating_4.0  \\\n",
+       "0                 0.00                 0.00                 0.00   \n",
+       "1                 0.00                 0.00                 0.00   \n",
+       "2                 0.00                 0.00                 0.00   \n",
+       "3                 0.00                 0.00                 0.00   \n",
+       "4                26.00                37.00                46.00   \n",
+       "\n",
+       "            rating_4.5           rating_5.0  \n",
+       "0                 0.00                 0.00  \n",
+       "1                 0.00                 0.00  \n",
+       "2                 0.00                 0.00  \n",
+       "3                 0.00                 0.00  \n",
+       "4                16.00                11.00  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_with_ratings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2281d341",
+   "id": "9355a754",
    "metadata": {},
    "outputs": [],
    "source": []
